# Privy

./: .env.example  .gitignore  LICENSE  README.md  build_deb.sh  pyproject.toml  requirements.txt
docs/: secrets.md
privy/: __init__.py  ai.py  main.py  pm.py  rag.py  status.py
tests/: test_main.py  test_rag.py  test_status.py
